--- a/package.json
+++ b/package.json
@@ -16,11 +16,21 @@
   },
   "homepage": "https://github.com/MarchalKobe/mct_researchproject_backend#readme",
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/mysql": "^2.15.20",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "apollo-server-express": "^3.6.1",
+    "cors": "^2.8.5",
+    "express": "^4.17.2",
+    "graphql": "^15.8.0",
+    "mysql": "^2.18.1",
+    "type-graphql": "^1.1.1",
+    "type-graphql-dataloader": "^0.5.0",
+    "typeorm": "^0.2.41",
+    "typeorm-extension": "^1.0.3"
   }
 }
