--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,5 +19,16 @@ services:
     links:
       - mariadb
 
+  redis:
+    image: redis:alpine
+    command: redis-server --requirepass ZEIFOzefRA240249dfgoj
+    ports:
+     - 6379:6379
+    volumes:
+      - $PWD/redis-data:/var/lib/redis
+      - $PWD/redis.conf:/usr/local/etc/redis/redis.conf
+    environment:
+     - REDIS_REPLICATION_MODE=master
+
 volumes:
   database:
