--- a/package.json
+++ b/package.json
@@ -16,21 +16,30 @@
   },
   "homepage": "https://github.com/MarchalKobe/mct_researchproject_backend#readme",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/ioredis": "^4.28.7",
     "@types/mysql": "^2.15.20",
+    "@types/nodemailer": "^6.4.4",
+    "@types/uuid": "^8.3.4",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   },
   "dependencies": {
     "apollo-server-express": "^3.6.1",
+    "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "firebase-admin": "^10.0.1",
     "graphql": "^15.8.0",
+    "ioredis": "^4.28.3",
     "mysql": "^2.18.1",
+    "nodemailer": "^6.7.2",
     "type-graphql": "^1.1.1",
     "type-graphql-dataloader": "^0.5.0",
     "typeorm": "^0.2.41",
-    "typeorm-extension": "^1.0.3"
+    "typeorm-extension": "^1.0.3",
+    "uuid": "^8.3.2"
   }
 }
