--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/ioredis": "^4.28.7",
+    "@types/jwt-decode": "^3.1.0",
     "@types/mysql": "^2.15.20",
     "@types/nodemailer": "^6.4.4",
     "@types/uuid": "^8.3.4",
@@ -34,6 +35,7 @@
     "firebase-admin": "^10.0.1",
     "graphql": "^15.8.0",
     "ioredis": "^4.28.3",
+    "jwt-decode": "^3.1.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.2",
     "type-graphql": "^1.1.1",
