--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "firebase-admin": "^10.0.1",
+    "generate-avatar": "^1.4.10",
     "graphql": "^15.8.0",
     "ioredis": "^4.28.3",
     "jwt-decode": "^3.1.2",
