Start scoring logic

--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
+    "@types/fast-levenshtein": "^0.0.2",
+    "@types/html-minifier": "^4.0.2",
+    "@types/html-validator": "^5.0.2",
     "@types/ioredis": "^4.28.7",
     "@types/jwt-decode": "^3.1.0",
     "@types/mysql": "^2.15.20",
@@ -32,9 +35,12 @@
     "bcrypt": "^5.0.1",
     "cors": "^2.8.5",
     "express": "^4.17.2",
+    "fast-levenshtein": "^3.0.0",
     "firebase-admin": "^10.0.1",
     "generate-avatar": "^1.4.10",
     "graphql": "^15.8.0",
+    "html-minifier": "^4.0.0",
+    "html-validator": "^6.0.0",
     "ioredis": "^4.28.3",
     "jwt-decode": "^3.1.2",
     "mysql": "^2.18.1",
