--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/html-minifier": "^4.0.2",
     "@types/html-validator": "^5.0.2",
     "@types/ioredis": "^4.28.7",
+    "@types/jsdom": "^16.2.14",
     "@types/jwt-decode": "^3.1.0",
     "@types/mysql": "^2.15.20",
     "@types/nodemailer": "^6.4.4",
@@ -42,6 +43,7 @@
     "html-minifier": "^4.0.0",
     "html-validator": "^6.0.0",
     "ioredis": "^4.28.3",
+    "jsdom": "^19.0.0",
     "jwt-decode": "^3.1.2",
     "mysql": "^2.18.1",
     "nodemailer": "^6.7.2",
