--- a/docker.ormconfig.env
+++ b/docker.ormconfig.env
@@ -8,3 +8,4 @@ TYPEORM_SYNCHRONIZE=true
 TYPEORM_LOGGING=false
 TYPEORM_ENTITIES_DIR=/usr/app/entities
 TYPEORM_ENTITIES=/usr/app/entities/**/*.js
+REDIS_URL=redis
