--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
+    "build": "tsc -p .",
     "start": "npx tsc && node dist/app.js",
     "dev": "npx nodemon --watch 'server/**/*' --exec 'ts-node' server/app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -16,7 +17,7 @@
   },
   "homepage": "https://github.com/MarchalKobe/mct_researchproject_backend#readme",
   "devDependencies": {
-    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/fast-levenshtein": "^0.0.2",
@@ -24,7 +25,6 @@
     "@types/html-validator": "^5.0.2",
     "@types/ioredis": "^4.28.7",
     "@types/jsdom": "^16.2.14",
-    "@types/jwt-decode": "^3.1.0",
     "@types/mysql": "^2.15.20",
     "@types/nodemailer": "^6.4.4",
     "@types/uuid": "^8.3.4",
@@ -33,7 +33,7 @@
   },
   "dependencies": {
     "apollo-server-express": "^3.6.1",
-    "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.2",
     "fast-levenshtein": "^3.0.0",
